# learn_rust

./: Cargo.toml
src/: user_client.rs  user_service.rs
src/traits/: Cargo.toml
src/traits/src/: main.rs  user_service.rs
