[package]
name = "learn_rust"
version = "0.1.0"
authors = ["Mesut Tasci <mesut.tasci@trendyol.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.42"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
